--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-pyrogram==1.4.16
-pymongo
 requests
+motor
+pymongo[src]
 dnspython
+python-telegram-bot==20.0
+Flask==2.2.2
+gunicorn==20.1.0
+aiohttp==3.8.1
+pyrogram==1.4.16
 tgcrypto==1.2.2
